fixed spacing on category page

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -142,6 +142,10 @@ text-align: center;
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-top: 1rem;
+    margin-left: ;
+}
+.category__business--container-list{
+    margin-left: -5em; ;
 }
 .contact__container{
     display: flex;
